--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,27 @@
+/* GLOBAL STYLES */
+
 * {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    line-height: 1.5;
 }
+
+h1 {
+    font-size: 250%;
+}
+
+h2 {
+    font-size: 175%;
+}
+
+
+
+/* SECTION STYLES */
+
+
+
+/* WORK LINK STYLES */
+
+
+
+/* MEDIA QUERIES */
