--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,24 +1,86 @@
 /* GLOBAL STYLES */
 
+:root {
+    --header-color: #cccccc;
+    --left-width: 300px;
+}
+
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1em;
     line-height: 1.5;
+    box-sizing: border-box;
 }
 
 h1 {
-    font-size: 250%;
+    font-size: 200%;
+    text-align: right;
 }
 
 h2 {
     font-size: 175%;
+    text-align: right;
+    line-height: 1;
 }
 
 
+/* HEADER STYLES */
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+header h1 {
+    color: black;
+    background-color: var(--header-color);
+    padding-right: 20px;
+    width: var(--left-width);
+}
+
+header a {
+    color: var(--header-color);
+    text-decoration: none;
+}
+
+nav menu {
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav menu li {
+    font-weight: bold;
+    padding: 5px 0;
+    border-bottom: 4px solid var(--header-color);
+    margin-right: 20px;
+}
 
 /* SECTION STYLES */
 
+section {
+    display: flex;
+    justify-content: stretch;
+    align-items: flex-start;
+    margin: 0 40px;
+}
 
+section h2 {
+    width: var(--left-width);
+    padding-right: 15px;
+    flex: 0 0 200px;
+}
+
+section p,
+section ul {
+    border-left: 3px solid black;
+    padding-left: 15px;
+}
+
+section ul {
+    list-style-type: none;
+}
 
 /* WORK LINK STYLES */
 
