--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,8 +50,10 @@ nav menu {
     justify-content: space-between;
 }
 
-nav menu li {
+nav menu li,
+section#contact-me li {
     font-weight: bold;
+    font-size: 90%;
     padding: 5px 0;
     border-bottom: 4px solid var(--header-color);
     margin-right: 20px;
@@ -64,6 +66,7 @@ section {
     justify-content: stretch;
     align-items: flex-start;
     margin: 0 40px;
+    width: 800px;
 }
 
 section h2 {
@@ -80,10 +83,62 @@ section ul {
 
 section ul {
     list-style-type: none;
+    display: flex;
+}
+
+section#contact-me ul {
+    justify-content: space-between;
+    width: 100%;
+}
+
+section#contact-me a {
+    text-decoration: none;
 }
 
 /* WORK LINK STYLES */
 
+section#work ul {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;    
+}
+    
+section#work a {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    border: 3px solid var(--header-color);
+}
+
+ul#work-items li {
+    width: 49%;
+    height: 150px;
+    margin: 5px 0;
+}
+
+ul#work-items li:first-of-type {
+    width: 100%;
+    height: 250px;
+}
+
+ul#work-items h3 {
+    margin-bottom: 0;
+}
+
+ul#work-items p {
+    background-color: var(--header-color);
+    border: none;
+    font-size: 60%;
+    padding: 8px 15px 8px 12px;
+}
+
+ul#work-items p strong {
+    display: block;
+    font-size: 120%;
+}
 
 
 /* MEDIA QUERIES */
