--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,8 @@
 
 :root {
     --header-color: #cccccc;
-    --left-width: 300px;
+    --work-items-color: green;
+    --left-flex: 0 0 175px;
     --work-1-img: url(../images/work-1.png);
     --work-2-img: url(../images/work-2.png);
     --work-3-img: url(../images/map.png);
@@ -35,13 +36,24 @@ h2 {
 header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
+    padding-top: 20px;
 }
 
 header h1 {
     color: black;
     background-color: var(--header-color);
     padding-right: 20px;
-    width: var(--left-width);
+    padding-left: 150px;
+    position: relative;
+}
+
+header h1 img {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    left: 20px;
+    top: -20px;
 }
 
 header a {
@@ -76,9 +88,8 @@ section {
 }
 
 section h2 {
-    width: var(--left-width);
     padding-right: 15px;
-    flex: 0 0 200px;
+    flex: var(--left-flex);
 }
 
 section p,
@@ -116,7 +127,7 @@ section#work a {
     align-items: flex-start;
     width: 100%;
     height: 100%;
-    border: 3px solid var(--header-color);
+    border: 2px solid black;
     text-decoration: none;
 }
 
@@ -124,11 +135,12 @@ ul#work-items li {
     width: 49%;
     height: 150px;
     margin: 5px 0;
+    border: 6px solid var(--work-items-color);
 }
 
 ul#work-items li:first-of-type {
     width: 100%;
-    height: 200px;
+    height: 250px;
 }
 
 ul#work-items h3 {
@@ -136,9 +148,13 @@ ul#work-items h3 {
 }
 
 ul#work-items p {
-    background-color: var(--header-color);
-    border: none;
-    font-size: 60%;
+    background-color: var(--work-items-color);
+    border: 2px solid black;
+    border-left: none;
+    position: relative;
+    left: -2px;
+    color: white;
+    font-size: 80%;
     padding: 8px 15px 8px 12px;
 }
 
