added fourth work example

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
     --work-1-img: url(../images/work-1.png);
     --work-2-img: url(../images/work-2.png);
     --work-3-img: url(../images/map.png);
-    --work-4-img: url();
+    --work-4-img: url(../images/dragging.png);
     --work-5-img: url();
     --work-6-img: url();
 }
