--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,14 @@
 /* GLOBAL STYLES */
 
 :root {
-    --header-color: #cccccc;
-    --work-items-color: green;
+    --header-highlight-color: #0a5829;
+    --header-text-color: white;
+    --work-items-highlight-color: rgb(146, 11, 11);
+    --left-column-highlight-color: darkgreen;
+    --work-items-inner-border: 1px;
+    --work-items-inner-relative: -1px;
+    --work-items-inner-color: white;
+    --header-background-color: red;
     --left-flex: 0 0 175px;
     --work-1-img: url(../images/work-1.png);
     --work-2-img: url(../images/work-2.png);
@@ -37,12 +43,15 @@ header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 15px;
+    /* background-color: var(--header-background-color); */
+    background: linear-gradient(0deg,var(--work-items-highlight-color) 40%,white 100%);
+    width: 100%;
+    z-index: 10;
 }
 
 header h1 {
-    color: black;
-    background-color: var(--header-color);
+    color: var(--header-text-color);
     padding-right: 20px;
     padding-left: 150px;
     position: relative;
@@ -52,13 +61,24 @@ header h1 img {
     height: 100px;
     width: 100px;
     position: absolute;
-    left: 20px;
-    top: -20px;
+    left: 25px;
+    top: -15px;
+    border: 1px solid black;
+}
+
+header a,
+footer a {
+    color: var(--header-highlight-color);
+    text-decoration: none;
 }
 
 header a {
-    color: var(--header-color);
-    text-decoration: none;
+    color: var(--header-text-color);
+}
+
+nav {
+    position: relative;
+    top: 12px;
 }
 
 nav menu {
@@ -69,46 +89,70 @@ nav menu {
 }
 
 nav menu li,
-section#contact-me li {
+footer li {
     font-weight: bold;
     font-size: 90%;
     padding: 5px 0;
-    border-bottom: 4px solid var(--header-color);
+    border-bottom: 4px solid var(--header-highlight-color);
     margin-right: 20px;
+}
+
+nav menu li {
+    border-bottom-color: var(--header-text-color);
 }
 
 /* SECTION STYLES */
 
-section {
+section,
+footer {
     display: flex;
     justify-content: stretch;
     align-items: flex-start;
-    margin: 0 40px;
-    max-width: 1000px;
+    margin: 0 auto;
+    max-width: 900px;
 }
 
-section h2 {
-    padding-right: 15px;
+section h2,
+footer h2 {
+    padding: 15px;
     flex: var(--left-flex);
+    background-color: var(--left-column-highlight-color);
+    color: white;
+    position: relative;
+    top: 10px;
+}
+
+footer h2 {
+    top: 5px;
+    font-size: 120%;
 }
 
 section p,
-section ul {
-    border-left: 3px solid black;
-    padding-left: 15px;
+section ul,
+footer ul {
+    border-left: 4px solid var(--left-column-highlight-color);
+    padding-left: 18px;
+    margin: 0;
+    padding-bottom: 60px;
 }
 
-section ul {
+footer ul {
+    padding-top: 22px;
+    padding-bottom: 50px;
+}
+
+section ul,
+footer ul {
     list-style-type: none;
     display: flex;
 }
 
-section#contact-me ul {
+footer ul {
     justify-content: space-between;
     width: 100%;
 }
 
-section#contact-me a {
+footer a {
     text-decoration: none;
 }
 
@@ -127,15 +171,21 @@ section#work a {
     align-items: flex-start;
     width: 100%;
     height: 100%;
-    border: 2px solid black;
+    border: var(--work-items-inner-border) solid var(--work-items-inner-color);
     text-decoration: none;
 }
 
 ul#work-items li {
     width: 49%;
     height: 150px;
-    margin: 5px 0;
-    border: 6px solid var(--work-items-color);
+    margin: 7px 0;
+    border: 7px solid var(--work-items-highlight-color);
+    opacity: .75;
+}
+
+ul#work-items li:hover {
+    box-shadow: 0 0 10px 4px var(--work-items-highlight-color);
+    opacity: 1;
 }
 
 ul#work-items li:first-of-type {
@@ -148,11 +198,12 @@ ul#work-items h3 {
 }
 
 ul#work-items p {
-    background-color: var(--work-items-color);
-    border: 2px solid black;
+    background-color: var(--work-items-highlight-color);
+    border: var(--work-items-inner-border) solid var(--work-items-inner-color);
     border-left: none;
     position: relative;
-    left: -2px;
+    left: var(--work-items-inner-relative);
+    top: -15px;
     color: white;
     font-size: 80%;
     padding: 8px 15px 8px 12px;
@@ -166,6 +217,7 @@ ul#work-items p strong {
 #work-items a#work-1 {
     background-image: var(--work-1-img);
     background-size: 100%;
+    background-position: 0 -12px;
 }
 
 #work-items a#work-2 {
