--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,7 +19,7 @@
 }
 
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1em;
     line-height: 1.5;
     box-sizing: border-box;
