--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -295,12 +295,17 @@ ul#work-items li {
     height: 150px;
     margin: 7px 0;
     border: 7px solid var(--work-items-highlight-color);
-    opacity: .75;
+    opacity: .8;
 }
 
 ul#work-items li:hover {
-    box-shadow: 0 0 10px 4px var(--work-items-highlight-color);
+    box-shadow: 0 0 10px 4px var(--left-column-highlight-color);
     opacity: 1;
+    border-color: var(--left-column-highlight-color);
+}
+
+ul#work-items li:hover p {
+    background-color: var(--left-column-highlight-color);
 }
 
 ul#work-items li:first-of-type {
