--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,12 +94,14 @@ h2 {
 
 header {
     display: flex;
+    position: relative;
     justify-content: space-between;
     margin-bottom: 20px;
     padding-top: 15px;
     /* background-color: var(--header-background-color); */
     background: linear-gradient(0deg,var(--work-items-highlight-color) 40%,white 100%);
     width: 100%;
+    height: 100px;
     z-index: 10;
 }
 
@@ -382,6 +384,21 @@ ul#work-items p strong {
         animation: none;
     }
 
+}
+
+@media screen and ( min-width: 1450px ) {
+
+    header h1 img {
+        width: 200px;
+        height: 200px;
+    }
+
+    header h1 {
+        padding-left: 250px;
+        font-size: 250%;
+        animation: none;
+        top: -15px;
+     }
 }
  
 @media screen and ( max-width: 900px ) {
