--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,7 @@
     --work-2-img: url(../images/work-2.png);
     --work-3-img: url(../images/map.png);
     --work-4-img: url(../images/dragging.png);
-    --work-5-img: url(../images/horiseon.png);
+    --work-5-img: url(../images/Horiseon.png);
     --work-6-img: url();
 }
 
