--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -209,10 +209,10 @@ header h1 {
     animation-timing-function: ease-out;
 }
 
-header h1 img {
+header img {
     /* main image of page */
     position: absolute;
-    top: -15px;
+    top: 16px;
     left: -500px;
     height: 100px;
     width: 100px;
@@ -428,12 +428,17 @@ section#work p strong {
     /* if on a tablet-sized screen */
 
     header h1,
-    header h1 img,
+    header img,
     header nav {
         /* turn off "screen assemble" navigations
         and place elements in final on-screen positions */
         animation: none;
         left: 0;
+    }
+
+    header img {
+        /* override position rule for image specifically */
+        left: 25px;
     }
 
     header h1 img {
@@ -541,10 +546,10 @@ section#work p strong {
         line-height: 55px;
     }
 
-    header h1 img {
+    header img {
         /* resize header image and place in specific location */
         position: absolute;
-        left: 0;
+        left: 18px;
         top: 0;
         width: 75px;
         height: 75px;
